<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>0v0</groupId>
    <artifactId>SelenaMod</artifactId>
    <version>0.1</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <finalName>SelenaMod</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <fork>true</fork>
                    <executable>C:/Program Files/Java/jdk1.8.0_171/bin/javac</executable>
                    <compilerArgs>
                        <arg>-J-Djava.ext.dirs=C:/Program Files/Java/jdk1.8.0_171/jre/lib/ext</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <outputDirectory>C:\Program Files (x86)\Steam\steamapps\common\SlayTheSpire\mods</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>modthespire</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:\Program Files (x86)\Steam\steamapps\workshop\content\646570\1605060445\ModTheSpire.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>baseMod</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:\Program Files (x86)\Steam\steamapps\workshop\content\646570\1605833019\BaseMod.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>desktop-1.0</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:\Program Files (x86)\Steam\steamapps\common\SlayTheSpire\desktop-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>stslib</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:\Program Files (x86)\Steam\steamapps\workshop\content\646570\1609158507\StSLib.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>VideoTheSpire</groupId>
            <artifactId>VideoTheSpire</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:\Program Files (x86)\Steam\steamapps\workshop\content\646570\3189856464\VideoTheSpire.jar
            </systemPath>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>